Laskun merkitseminen maksetuksi toteutettu.

--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -1322,6 +1322,10 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="lahetaMuistutuslaskut" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                              <Component id="laskuViestit" min="-2" pref="340" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="25" max="32767" attributes="0"/>
                   </Group>
@@ -1342,7 +1346,9 @@
                           <Component id="laskuMaksettu" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lahetaMuistutuslaskut" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="39" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="laskuViestit" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="17" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1455,6 +1461,11 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="lahetaMuistutuslaskutActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="laskuViestit">
+              <Properties>
+                <Property name="text" type="java.lang.String" value=" "/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
